--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -734,7 +734,7 @@ li {
         width: 200px;
     }
     .team-image img {
-        width: 60px;
+        width: 100%;
     }
 }
 
@@ -777,7 +777,7 @@ li {
     }
 
     .horizontal-line {
-        width: 400px;
+        width: 350px;
     }
     .foot-header {
         font-size: 25px;
@@ -812,10 +812,128 @@ li {
 }
 @media (max-width: 430px) {
     .foot-header {
-        padding: 0 10px;
+        padding: 0 5px;
     }
-    .horizontal-line {
+    /* .horizontal-line {
         width: 300px;
+    } */
+}
+
+
+
+
+.league-table-container {
+    background-color: var(--backround-color);
+    padding-top: 100px;
+}
+
+.league-series-table-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    padding: 0 10px;
+}
+.series-table {
+    width: 400px;
+    background-color: var(--primary-light-color);
+}
+.series-table.ed {
+    width: 800px;
+    margin-left: 20px;
+} 
+
+.series-text{
+    background-color: var(--secondary-color);
+    color: white;
+    padding: 12px 10px;
+    text-transform: capitalize;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.series-table-content {
+    background-color: rgb(85, 85, 85);
+    padding: 0 5px;
+}
+.series-header {
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr 1fr;
+    color: #da1d56;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-family: var(--header-font-family);
+    font-size: 15px;
+    background-color: var(--backround-color);
+    padding: 10px 0 10px 10px;
+}
+.series-header.ed {
+    grid-template-columns: 2fr 2fr 1fr 1fr;
+}
+
+.series-content {
+    color: white;
+    text-transform: capitalize;
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr 1fr;
+    padding: 10px 0 10px 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.series-content.grid {
+    grid-template-columns: 2fr 2fr 1fr 1fr;
+}
+.series-content span {
+    text-transform: lowercase;
+}
+
+.series-content.ed {
+    background-color: var(--backround-color);
+}
+.series-table-end {
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 15px 0 15px 10px;
+} 
+
+@media(max-width: 970px) {
+    .series-content.grid {
+        grid-template-columns: 1.5fr 1.5fr 1fr 1fr;
+    }
+    .series-header.ed {
+        grid-template-columns: 1.5fr 1.5fr 1fr 1fr;
+    }
+}
+@media(max-width: 820px) {
+    .series-content.grid {
+        grid-template-columns: 1.2fr 1.2fr 1fr 1fr;
+    }
+    .series-header.ed {
+        grid-template-columns: 1.2fr 1.2fr 1fr 1fr;
+    }
+    .series-header {
+        grid-template-columns: 3fr 1fr 1fr 1fr;
+    }
+    .series-content {
+        grid-template-columns: 3fr 1fr 1fr 1fr;
+    }
+}
+@media(max-width: 770px) {
+    .league-series-table-container {
+        flex-direction: column;
+    }
+    .series-table.ed {
+        margin-left: 0;
+        margin-top: 40px;
+        width: 100%;
+    } 
+    .series-table {
+        width: 100%;
+    }
+}
+@media(max-width: 540px) {
+    .series-header.ed {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    .series-content.grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
 
