--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -12,6 +12,7 @@ li {
     --primary-light-color: #636363;
     --backround-color: #333333;
     --secondary-color: #d63384;
+    --primary-color: #da1d56;
     --grey-color: #636363;
     --header-font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -824,7 +825,7 @@ li {
 
 .league-table-container {
     background-color: var(--backround-color);
-    padding-top: 100px;
+    padding-top: 130px;
 }
 
 .league-series-table-container {
@@ -857,7 +858,7 @@ li {
 .series-header {
     display: grid;
     grid-template-columns: 3fr 1fr 1fr 1fr;
-    color: #da1d56;
+    color: var(--primary-color);
     font-weight: 800;
     text-transform: uppercase;
     font-family: var(--header-font-family);
@@ -934,6 +935,285 @@ li {
     }
     .series-content.grid {
         grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+
+
+
+.out-team-store-container {
+    background-color: var(--backround-color);
+    padding-top: 130px;
+}
+.our-team-store-btns-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px 0 0;
+    margin-top: 30px;
+}
+.our-team-link-btns {
+    display: flex;
+}
+.our-team-link-btns button {
+    border: none;
+    color: white;
+}
+.latest-btn {
+    background-color: #b91d4c;
+    padding: 5px 20px 5px 5px;
+    text-transform: capitalize;
+    font-family: var(--header-font-family);
+    font-size: 20px;
+    font-weight: 550;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    position: relative;
+    cursor: pointer;
+    z-index: 10;
+}
+.latest-btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-color);
+    z-index: -1;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    transition: 0.3s;
+}
+.latest-btn:hover::before {
+    transform: translateX(-100%);
+}
+
+.bestseller-btn {
+    padding: 5px 20px 5px 5px;
+    text-transform: capitalize;
+    font-family: var(--header-font-family);
+    font-weight: 550;
+    font-size: 20px;
+    background-color: transparent;
+    margin-left: 20px;
+    position: relative;
+    z-index: 10;
+    overflow: hidden;
+    cursor: pointer;
+}
+.bestseller-btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%);
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-color);
+    z-index: -1;
+    transition: 0.3s;
+}
+.bestseller-btn:hover::before {
+    cursor: pointer;
+    transform: translateX(0);
+}
+
+.our-team-angle-btns {
+    display: flex;
+}
+.our-team-angle-btns button {
+    border: none;
+    color: white;
+}
+.main-angle-btn {
+    background-color: var(--primary-color);
+    font-size: 28px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
+}
+.main-angle-btn::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%) scale(0);
+    width: 100%;
+    height: 100%;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #b91d4c;
+    transition: 0.3s;
+    /* opacity: 0; */
+    z-index: -1;
+}
+.main-angle-btn:hover::after {
+    transform: translateX(0) scale(1);
+    /* opacity: 1; */
+} 
+.main-angle-btn.right::after {
+    transform: translateX(100%) scale(0);
+}
+.main-angle-btn.right:hover::after {
+    transform: translateX(0) scale(1);
+}
+
+
+.our-team-store-content {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+.main-content-container {
+    width: 300px;
+    transition: 0.3s;
+    border-radius: 10px;
+}
+.main-content-container:hover {
+    border: 1px solid var(--secondary-color);
+}
+.main-content-container.ed {
+    margin: 0 20px;
+}
+.main-content-container {
+    background-color: var(--grey-color);
+    padding: 0 10px 10px 10px;
+}
+
+/* .team-content {
+    width: 270px;
+} */
+.team-content img {
+    width: 280px;
+    padding: 10px;
+    background-color: rgb(136, 135, 135);
+}
+
+.team-content-info-header {
+    margin-top: 20px;
+}
+.team-content-info-header {
+    display: flex;
+    justify-content: space-between;
+}
+.team-content-info-header-text {
+    text-transform: capitalize;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: var(--secondary-color);
+    font-weight: 600;
+    font-size: 14px;
+}
+.team-content-comments {
+    display: flex;
+}
+.team-content-comments i {
+    background-color: var(--backround-color);
+    color: white;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    position: relative;
+    z-index: 10;
+    cursor: pointer;
+}
+.team-content-comments i::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--secondary-color);
+    border-radius: 50%;
+    z-index: -1;
+    transform: scale(0);
+    transition: 0.3s;
+}
+.team-content-comments i:hover::after {
+    transform: scale(1);
+}
+
+.name-price-content {
+    text-transform: capitalize;
+    font-weight: 700;
+    font-family: var(--header-font-family);
+    color: white;
+    line-height: 30px;
+}
+
+
+@media(max-width: 970px) {
+    .main-content-container {
+        width: 250px;
+    }
+    .team-content img {
+        width: 230px;
+    }
+    .our-team-store-content {
+        padding: 10px;
+    }
+}
+@media(max-width: 820px) {
+    .our-team-store-content {
+        flex-wrap: wrap;
+    }
+}
+@media(max-width: 809px) {
+    .main-content-container.ed3 {
+        margin-top: 30px;
+    } 
+    
+}
+@media(max-width: 570px) {
+    .main-content-container.ed {
+        margin-right: 0;
+    }
+}
+@media(max-width: 545px) {
+    .main-content-container.ed {
+        margin-left: 0;
+    }
+}
+@media(max-width: 534px) {
+    .main-content-container.ed {
+        margin-top: 30px;
+    }
+    .main-content-container {
+        width: 303px;
+    }
+    .team-content img {
+        width: 280px;
+    }
+}
+@media(max-width: 390px) {
+    .main-content-container {
+        width: 250px;
+    }
+    .team-content img {
+        width: 230px;
+    }
+}
+@media(max-width: 360px) {
+    .main-content-container {
+        width: 90%;
+        /* aspect-ratio: 16/9; */
+    }
+    .team-content img {
+        width: 100%;
     }
 }
 
