latest blog section with responsive and modification of nav bar(javascript display hidden when click)

--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -1030,7 +1030,7 @@ abbr {
     color: white;
 }
 .main-angle-btn {
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     font-size: 28px;
     width: 40px;
     height: 40px;
@@ -1517,6 +1517,241 @@ abbr {
         text-align: center;
     }
 } */
+
+
+
+
+
+
+.latest-blog-container {
+    background-color: var(--backround-color);
+    padding-top: 130px;
+}
+.our-team-angle-btns.otab-margin {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 10px;
+}
+.latest-blog-content-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.two-latest-blog {
+    display: flex;
+}
+.latest-blog-card {
+    background-color: var(--primary-light-color);
+    padding: 0 10px 25px 10px;
+    overflow: hidden;
+    border-radius: 12px;
+    width: 400px;
+}
+.latest-blog-card:hover .blog-card-icons {
+    transform: translateY(0);
+    opacity: 1;
+    top: 20px;
+}
+.latest-blog-card.lbc-margin {
+    margin: 0 30px;
+}
+
+.latest-blog-card-image {
+    background-image: url('/images/blog1.png');
+    height: 300px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+}
+.latest-blog-card-image.lbc-ed2 {
+    background-image: url('/images/blog2.png');
+}
+.latest-blog-card-image.lbc-ed3 {
+    background-image: url('/images/blog3.png');
+}
+
+.blog-card-top {
+    position: relative;
+}
+.latest-blog-date {
+    background-color: var(--secondary-color);
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    padding: 10px 15px;
+    color: white;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 600;
+    line-height: 20px;
+    border-radius: 10px;
+}
+
+.blog-card-icons {
+    position: absolute;
+    right: 10px;
+    transform: translateY(-100%);
+    display: flex;
+    transition: 0.5s;
+    opacity: 0;
+}
+.card-icon a {
+    color: white;
+    text-decoration: none;
+    background-color: var(--secondary-color);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    transition: 0.3s;
+    margin-left: 10px;
+}
+.card-icon a:hover {
+    cursor: pointer;
+    background-color: var(--primary-light-color);
+}
+
+.blog-info-container {
+    margin-top: 20px;
+}
+.blog-comment {
+    text-align: end;
+}
+.blog-comment a {
+    text-decoration: none;
+    color: var(--secondary-color);
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.blog-comment span {
+    color: white;
+    margin-left: 5px;
+    transition: 0.3s;
+}
+.blog-comment a:hover span {
+    color: var(--secondary-color);
+}
+.blog-info-link {
+    text-align: center;
+    margin: 15px 0;
+}
+.blog-info-link a {
+    text-decoration: none;
+    text-transform: capitalize;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
+    transition: 0.5s;
+}
+.blog-info-link a:hover {
+    color: var(--secondary-color);
+}
+.blgo-info-text {
+    color: white;
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 30px;
+    text-align: center;
+}
+.horizontal-line2 {
+    background-color: var(--secondary-color);
+    height: 2px;
+    width: 100px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 20px 0 35px 0;
+}
+
+
+@media(max-width: 1270px) {
+    .latest-blog-card {
+        width: 350px;
+    }
+    .latest-blog-card-image {
+        height: 250px;
+    }
+}
+@media(max-width: 1150px) {
+    .latest-blog-content-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .latest-blog-card.lbc-margin {
+        margin-right: 0;
+    }
+    .two-latest-blog.tlb-ed2 {
+        margin-top: 50px;
+    } 
+    .latest-blog-card {
+        width: 400px;
+    }
+    .latest-blog-card-image {
+        height: 300px;
+    }
+}
+@media(max-width: 875px) {
+    .latest-blog-card {
+        width: 350px;
+    }
+    .latest-blog-card-image {
+        height: 250px;
+    }
+}
+@media(max-width: 780px) {
+    .latest-blog-card {
+        width: 300px;
+    }
+    .latest-blog-card-image {
+        height: 200px;
+    }
+}
+@media(max-width: 680px) {
+    .latest-blog-card {
+        width: 400px;
+    }
+    .latest-blog-card-image {
+        height: 300px;
+    }
+    .two-latest-blog {
+        flex-direction: column;
+    }
+    .latest-blog-card.lbc-margin {
+        margin-left: 0;
+        margin-top: 50px;
+    }
+}
+@media(max-width: 460px) {
+     .latest-blog-card {
+        width: 350px;
+    }
+    .latest-blog-card-image {
+        height: 250px;
+    }
+}
+@media(max-width: 400px) {
+     .latest-blog-card {
+        width: 340px;
+    }
+    .latest-blog-card-image {
+        height: 230px;
+    }
+}
+@media(max-width: 350px) {
+     .latest-blog-card {
+        width: 100%;
+    }
+    .latest-blog-card-image img {
+        /* height: 100%; */
+        aspect-ratio: 16/9;
+    }
+}
 
 
 
